@@ -1,21 +1,21 @@
 {
-  "timestamp" : "2024-04-25T16:14:44Z",
-  "count_outdated" : 485,
-  "uniques_outdated" : 314,
-  "count" : 489,
-  "uniques" : 316,
+  "timestamp" : "2024-05-08T16:15:24Z",
+  "count_outdated" : 488,
+  "uniques_outdated" : 315,
+  "count" : 490,
+  "uniques" : 317,
   "clones" : [
     {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "timestamp": "2024-04-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2024-04-25T00:00:00Z",
+      "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
